add debug fps display

--- a/templates/partials/hud-and-game.html
+++ b/templates/partials/hud-and-game.html
@@ -26,6 +26,10 @@
                         <span class="hud__top-meta-label" data-i18n-key="hud.label.multiplier">Mult.</span>
                         <span id="hud-score-multiplier" class="hud__top-meta-value hud__multiplier">x1.00</span>
                     </span>
+                    <span id="hud-fps" class="hud__top-meta-item hud__top-meta-item--debug" hidden>
+                        <span class="hud__top-meta-label">FPS</span>
+                        <span class="hud__top-meta-value hud__fps-value">--</span>
+                    </span>
                 </div>
                 <div class="hud__card hud__card--goals hud__card--goals-compact">
                     <div id="hud-time-hint" class="hud__time-hint" hidden></div>
