--- a/css/modal.css
+++ b/css/modal.css
@@ -44,6 +44,17 @@
     color: #cfd5ff;
 }
 
+.modal__coin-summary {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.35rem;
+}
+
+.modal__coin-icon {
+    width: 1rem;
+    height: 1rem;
+}
+
 .modal__actions {
     margin-top: 0.5rem;
     display: flex;
