update candy guide for hard candies

--- a/templates/partials/tutorial.html
+++ b/templates/partials/tutorial.html
@@ -368,6 +368,32 @@
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--hard tutorial__item-icon--hard-2" aria-hidden="true">
+                                        <span class="tutorial__item-icon-core"></span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.obstacles.hard2Title">
+                                            Hard candy 2
+                                        </span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.obstacles.hard2Text">
+                                            Needs two adjacent matches to clear.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--hard tutorial__item-icon--hard-3" aria-hidden="true">
+                                        <span class="tutorial__item-icon-core"></span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.obstacles.hard3Title">
+                                            Hard candy 3
+                                        </span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.obstacles.hard3Text">
+                                            Needs three adjacent matches to clear.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--chest" aria-hidden="true">
                                         <span class="tutorial__item-icon-core"></span>
                                     </span>
