--- a/templates/partials/hud-and-game.html
+++ b/templates/partials/hud-and-game.html
@@ -58,6 +58,7 @@
                 <div id="score-progress-fill" class="hud__progress-fill"></div>
                 <span id="hud-multiplier-progress-slot" class="hud__progress-multiplier-slot">
                     <span id="hud-multiplier" class="hud__multiplier">x1.00</span>
+                    <span id="hud-chain-modifier" class="hud__chain-modifier">🗲 0.00</span>
                 </span>
                 <span class="hud__progress-value">
                     <span id="score" class="hud__value-strong">0/300</span>
