--- a/templates/partials/tutorial.html
+++ b/templates/partials/tutorial.html
@@ -348,12 +348,7 @@
                             <ul class="tutorial__list" role="list">
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--shifting" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M4 8h7a4 4 0 1 1-4 6" />
-                                            <path d="M20 16h-7a4 4 0 1 1 4-6" />
-                                            <path d="M6.5 6.5l-2.5 2.5 2.5 2.5" />
-                                            <path d="M17.5 17.5l2.5-2.5-2.5-2.5" />
-                                        </svg>
+                                        <span class="tutorial__item-icon-core tutorial__item-icon-core--shifting" style="--shifting-next-color: #f2c94c; --shifting-candy-color: #3fb4c8;"></span>
                                     </span>
                                     <div class="tutorial__item-body">
                                         <span class="tutorial__item-title" data-i18n-key="tutorial.mechanics.shiftingTitle">Shifting candy</span>
